# mdbook-journal

./: .example.book.toml  Cargo.toml  LICENSE  README.md  SUMMARY.md  book.toml  justfile
.github/workflows/: deploy.yml  documentation.yml  release-tag.yml
benches/: benches.rs
blog/: initial-release.md  leaf-templates-are-here.md
docs/: development-setup.md  useage.md
examples/tickets/: book.toml
examples/tickets/src/ticket/2024-08/: 00438-panic-for-pleasure.md
src/: journal.rs  lib.rs
src/index/: dir_index.rs  mod.rs
src/index/dir_index/: private.rs
src/journal/: entry.rs  loader.rs  persistence.rs  topic.rs
src/journal/entry/: builder.rs  meta.rs
src/journal/loader/: cli.rs
src/journal/loader/traits/: journal_loader.rs  mod.rs
src/journal/persistence/: file.rs
src/journal/persistence/file/: encoding.rs  query.rs
src/journal/persistence/traits/: entry_persistence.rs  mod.rs  persistence.rs
src/journal/topic/: builder.rs  cli_entry.rs  dir_mapper.rs  filename_mapper.rs  json_entry.rs  map.rs  path_mapping.rs  template.rs  variables.rs
src/journal/topic/traits/: entry_generation.rs  mod.rs
src/mdbook/: config.rs  dto.rs  mod.rs
src/mdbook/preprocessor/: mod.rs  naive.rs  simple_directory.rs
src/mdbook/preprocessor/simple_directory/: directory_template.rs  index.hbs
src/mdbook/traits/: book_extension.rs  bookitem_extension.rs  mod.rs  section_number_extension.rs
src/support/: mod.rs
src/support/fixtures/: mod.rs
