[package]
name = "mdbook-journal"
version = "0.2.2"
authors = ["Ben Falk <benjamin.falk@yahoo.com>"]
edition = "2021"
description = "journal plugin for mdBook"
keywords = ["book", "gitbook", "mdbook", "markdown", "plugin"]
categories = ["command-line-utilities", "template-engine"]
license = "MIT"
readme = "README.md"
homepage = "https://benfalk.github.io/mdbook-journal/"
repository = "https://github.com/benfalk/mdbook-journal"

[features]
default = ["cli"]
cli = ["clap", "env_logger"]

[[bin]]
name = "mdbook-journal"
path = "src/bin/mdbook-journal.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml_edit = "0.22"
toml = "0.8"
chrono = "0.4"
thiserror = "1.0"
handlebars = { version = "6.0", features = ["string_helpers"] }
mdbook = "0.4"
markdown-it = "0.6"
markdown-it-front-matter = "0.3"
log = "0.4"
anyhow = "1.0"
walkdir = "2.5"
once_cell = "1.19"
convert_case = "0.6"

# Optional Dependenciesmdbook = "0.4.40"
env_logger = { version = "0.11", optional = true }
clap = { version = "4.5", features = ["std", "derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
rstest = "0.22"
mockall = "0.13"

[[bench]]
name = "benches"
harness = false
